<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.orange.datavenue.MainActivity">

    <item
        android:id="@+id/action_share_stream"
        android:title="@string/share"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_update_stream"
        android:title="@string/update"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete_stream"
        android:title="@string/delete"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="always" />

</menu>
